# epn-rust

./: .gitignore  Cargo.toml  config.json  env.json  env_dynamic_obstacles.json  test_env.json
src/: ga.rs  main.rs  tests.rs
src/ga/: crossover.rs  dynamic.rs  mutation.rs  selection.rs
